style(geral): finalizando responsividade

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                 <a class="uk-accordion-title" href="#">Header</a>
                                 <div class="uk-accordion-content uk-padding uk-background-default">
                                     <div class="accordion-body section-header">
-                                        <div class="input-flex uk-flex uk-flex-bottom uk-flex-between" data-element="profile-photo">
+                                        <div class="input-flex" data-element="profile-photo">
                                             <div class="uk-flex uk-flex-column">
 
                                                 <label class="uk-form-label uk-margin-bottom">Foto de Perfil</label>
@@ -68,7 +68,7 @@
 
                                         <hr class="uk-divider-small uk-margin">
 
-                                        <div class="input-flex uk-flex uk-flex-between uk-flex-bottom uk-width-1-1" data-element="user-name">
+                                        <div class="input-flex uk-width-1-1" data-element="user-name">
                                             <div class="uk-flex uk-flex-column align-items-start">
                                                 <div class="uk-margin">
                                                     <label for="beacons-name" class="uk-form-label">Nome</label>
@@ -101,7 +101,7 @@
                                         <p class="mb-0">Mostrar Textos</p>
                                     </div>
                                     <div class="accordion-body section-text">
-                                        <div class="input-flex uk-flex justify-between uk-flex-bottom my-4" data-element="bio">
+                                        <div class="input-flex" data-element="bio">
                                             <div class="uk-width-1-1">
                                                 <label for="beacons-bio" class="uk-form-label">Bio</label>
                                                 <div class="uk-form-controls">
@@ -127,7 +127,7 @@
                                         <p class="mb-0">Mostrar Links</p>
                                     </div>
                                     <div class="accordion-body section-links">
-                                        <div class="input-flex uk-flex uk-flex-between uk-flex-bottom my-4" data-element="links">
+                                        <div class="input-flex" data-element="links">
                                             <div>
                                                 <div class="uk-margin">
                                                     <label for="beacons-link-name" class="uk-form-label">Nome do Link</label>
@@ -161,7 +161,7 @@
                                         <p class="mb-0">Mostrar Email</p>
                                     </div>
                                     <div class="accordion-body section-email">
-                                        <div class="input-flex uk-flex uk-flex-middle uk-flex-between my-4" data-element="email">
+                                        <div class="input-flex" data-element="email">
                                             <div class="uk-margin">
                                                 <label for="beacons-email" class="uk-form-label uk-text-default">Email</label>
                                                 <div class="uk-form-controls">
@@ -186,7 +186,7 @@
                                         <p class="mb-0">Mostrar Tweet</p>
                                     </div>
                                     <div class="accordion-body section-tweet">
-                                        <div class="input-flex uk-flex uk-flex-middle uk-flex-between my-4" data-element="tweet">
+                                        <div class="input-flex" data-element="tweet">
                                             <div class="uk-margin">
                                                 <label for="beacons-tweet" class="uk-form-label">Tweet</label>
                                                 <div class="uk-form-controls">
@@ -216,7 +216,7 @@
                                         <p class="mb-0">Mostrar Vídeo</p>
                                     </div>
                                     <div class="accordion-body section-video">
-                                        <div class="input-flex uk-flex uk-flex-middle uk-flex-between my-4" data-element="video">
+                                        <div class="input-flex" data-element="video">
                                             <div class="uk-margin">
                                                 <label for="beacons-video" class="uk-form-label">Vídeo</label>
                                                 <div class="uk-form-controls">
@@ -247,7 +247,7 @@
                                         <p class="mb-0">Mostrar plataforma</p>
                                     </div>
                                     <div class="accordion-body section-music">
-                                        <div class="input-flex uk-flex uk-flex-middle uk-flex-bottom uk-flex-between" data-element="music">
+                                        <div class="input-flex" data-element="music">
                                             <div class="uk-margin-top">
                                                 <label for="beacons-music" class="uk-form-label">Música</label>
                                                 <div class="uk-form-controls">
@@ -270,7 +270,7 @@
                                 <a class="uk-accordion-title" href="#">Background</a>
                                 <div class="uk-accordion-content uk-padding uk-background-default">
                                     <div class="accordion-body">
-                                        <div class="input-flex uk-flex uk-flex-bottom uk-flex-between" data-element="background">
+                                        <div class="input-flex" data-element="background">
                                             <div class="uk-flex uk-flex-column">
 
                                                 <label class="uk-form-label uk-margin-bottom">Fundo de tela</label>
@@ -320,7 +320,7 @@
                                 <a class="uk-accordion-title" href="#">Efeitos</a>
                                 <div class="uk-accordion-content uk-padding uk-background-default">
                                     <div class="accordion-body effects">
-                                        <div class="input-flex uk-flex uk-flex-bottom uk-flex-between" data-element="effects">
+                                        <div class="input-flex" data-element="effects">
                                             <div class="uk-flex uk-flex-column">
                                                 <label class="uk-form-label uk-margin-bottom">Fundo de tela</label>
 
@@ -374,7 +374,7 @@
                                 <a class="uk-accordion-title" href="#">Fonte</a>
                                 <div class="uk-accordion-content uk-padding uk-background-default">
                                     <div class="accordion-body font">
-                                        <div class="input-flex uk-flex uk-flex-bottom uk-flex-between" data-element="effects">
+                                        <div class="input-flex" data-element="effects">
                                             <div class="uk-flex uk-flex-column">
                                                 <h4>Títulos</h4>
                                                 <div class="input-flex uk-column-1-2">
