--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="board">
                 <!-- tabs menu-->
                 <ul class="uk-tab" data-uk-tab="{connect:'#tab-id'}">
-                    <li><a href="">Conteúdo</a></li>
-                    <li><a href="">Aparência</a></li>
+                    <li><a href="">📝 Conteúdo</a></li>
+                    <li><a href="">🖌 Aparência</a></li>
                 </ul>
 
                 <div id="tab-id" class="uk-switcher uk-margin">
@@ -49,7 +49,7 @@
                                                 </div>
 
                                                 <div class="chooseFile uk-margin-top">
-                                                    <label for="file" class="uk-form-label">Add Arquivo</label>
+                                                    <label for="file" class="uk-form-label uk-block">Enviar Arquivo</label>
                                                     <div uk-form-custom="target: true" class="uk-form-controls">
                                                         <input type="file" id="file">
                                                         <input class="uk-input" type="text" placeholder="Clique para selecionar um arquivo" disabled>
@@ -57,7 +57,7 @@
                                                 </div>
 
                                                 <div class="chooseUrl uk-margin-top uk-hidden">
-                                                    <label for="beacons-link-value" class="uk-form-label">Add URL</label>
+                                                    <label for="beacons-link-value" class="uk-form-label uk-block">Add URL</label>
                                                     <div class="uk-form-controls">
                                                         <input type="text" class="uk-input" id="url" placeholder="https://">
                                                     </div>
@@ -288,22 +288,22 @@
                                                 </div>
 
                                                 <div class="chooseFileBg uk-margin-top">
-                                                    <label for="backgroundFile" class="uk-form-label">Add Arquivo</label>
+                                                    <label for="backgroundFile" class="uk-form-label uk-block">Enviar Arquivo</label>
                                                     <div uk-form-custom="target: true" class="uk-form-controls">
                                                         <input type="file" id="backgroundFile">
-                                                        <input class="uk-input uk-form-width-medium" type="text" placeholder="Select file" disabled>
+                                                        <input class="uk-input uk-form-width-medium" type="text" placeholder="Clique para selecionar um arquivo" disabled>
                                                     </div>
                                                 </div>
 
                                                 <div class="chooseUrlBg uk-margin-top uk-hidden">
-                                                    <label for="backgroundUrl" class="uk-form-label">Add URL</label>
+                                                    <label for="backgroundUrl" class="uk-form-label uk-block">Adicionar URL</label>
                                                     <div class="uk-form-controls">
                                                         <input type="text" class="uk-input" id="backgroundUrl" placeholder="https://">
                                                     </div>
                                                 </div>
 
                                                 <div class="chooseColorBg uk-margin-top uk-hidden">
-                                                    <label for="backgroundColor" class="uk-form-label">Escolher Cor</label>
+                                                    <label for="backgroundColor" class="uk-form-label uk-block">Escolher Cor</label>
                                                     <div class="uk-form-controls">
                                                         <input type="color" class="uk-input" id="backgroundColor">
                                                     </div>
