feat(botao add): add func que remove disabled

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                                                 <div class="chooseUrl uk-margin-top uk-hidden">
                                                     <label for="beacons-link-value" class="uk-form-label uk-block">Add URL</label>
                                                     <div class="uk-form-controls">
-                                                        <input type="text" class="uk-input" id="url" placeholder="https://">
+                                                        <input type="url" class="uk-input" id="url" placeholder="https://exemplo.com" pattern="https://.*">
                                                     </div>
                                                 </div>
                                             </div>
-                                            <button class="uk-button uk-button-secondary add-profilephoto">Adicionar</button>
+                                            <button class="uk-button uk-button-secondary add-profilephoto" disabled>Adicionar</button>
                                         </div>
 
                                         <hr>
@@ -84,7 +84,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <button class="uk-button uk-button-secondary add-username">Adicionar</button>
+                                            <button class="uk-button uk-button-secondary add-username" disabled>Adicionar</button>
                                         </div>
                                     </div>
                                 </div>
