feat(btnPreview): mostra botao apenas se tiver conteudo

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
         <div class="preview-grid">
             <div class="sticky-top">
                 <div class="uk-margin-auto uk-flex uk-margin-bottom">
-                    <button class="uk-button uk-button-text btn-preview">Pré-visualizar 👀</button>
+                    <button class="uk-button uk-button-text btn-preview uk-hidden">Pré-visualizar 👀</button>
                 </div>
                 <div class="border-preview uk-margin-auto">
                     <div class="dropzone-preview ">
